--- a/scrutinizer/README
+++ b/scrutinizer/README
@@ -1,7 +1,8 @@
 To build run the 'build.sh' script
 
 To run the programs you must first edit the script
-'setEnv.sh' so that the environment variables are set 
-to wherever the files are located on your local computer.
+'setEnv.sh' so that the environment variables needed are set
+correctly. Simply edit before '/granska/..' with the location of
+the directory 'granska' on your local computer.
 Then run the script whith the command '. setEnv.sh' (not the
 space after the dot).
