Big update. Some changes: should now be compliant with modern C/C++, the server mode can now accept custom rules in requests, some hardcoded references to default locations of lexicons etc. have been moved from individual files to the Makefile, problems with sentences sometimes being printed several times (or not at all) should be fixed, scrutinizing text from URLs now uses lynx to get the text and strip the HTML, some problems with newer versions of xerces are fixed.

--- a/scrutinizer/README
+++ b/scrutinizer/README
@@ -1,6 +1,6 @@
 Building requires the following packages to be installed on
 your machine:
-g++, makedepend, flex, bison and xerces-c-3.1.1
+g++, makedepend, flex, bison and xerces-c
 
 To build run 'make' and install the library with 'sudo make install'.
 
@@ -15,3 +15,51 @@ Before you run the programs you must run the script 'setEnv.sh'.
 run it as: . setEnv.sh 
 Note the space after the dot. If not used, the variables will only
 be set within the sript setEnv.sh. 
+
+--- 2020-12-01 ----
+
+------- CGI-Granska -------------
+When building cgi-granska (wwwscrutinizer):
+* If you want to debug, remember to remove the line "strip
+wwwscrutinizer" from the Makefile.
+* Comment out the flags $(PROBCHECK_FLAGS) $(WEB_FLAGS) from ALL_FLAGS
+and -DDEVELOPER_OUTPUT from SCRUT_FLAGS
+* The locations of the rule file, the tagger lexicon files, example sentences file, and rule file when adding user created rules all used to be hardcoded in wwwmain.cpp and wwwscrutinizer.c but these have now been moved to the Makefile. The TAGGERLEXICONFOLDER, EXAMPLESENTENCESFILE, DEFAULTRULEFILE, and STAVALEXICONFOLDER need to be set to the correct file system locations before compiling.
+* If the rulefile does not have a stored .opt file, wwwscrutinizer
+needs write permission in the folder of the rulefile the first time it
+runs or you will get a segmentation fault. A quick way to avoid
+problems is to run wwwscrutinizer once as root (sudo), but when
+running as root wwwscrutinizer needs to have something to scrutinize
+or it will not even try to load the rule file. Similarly, if there are
+no "fast" files for the tagger lexicon files, the wwwscrutinizer will
+try to write such files and fail if write permission is not given.
+
+------- Parser version of Granska -------------
+When using Granska for parsing, you need to compile the scrutinizer
+with -DDEVELOPER_OUTPUT.
+
+You also need to give lots of extra options when running the program:
+
+./scrutinizer.parse -Cb 1 -Cr /home/jsh/servergranskafiles/servergranska/lexikon/tags/repr.ptt -w parse 6127 public parse -Ch 4 -CH 3 -J none 0 2
+
+
+--------------------------------
+Here is a simple example rule to test the "use my own rules" for the CGI version of Granska:
+--------------------------------
+% Varje regel måste tillhöra en kategori, den anges såhär:
+category exempelregler {
+info("exempelregel")
+link("http://www.nada.kth.se/kurser/kth/2D1418/laborationer00/granska/exempelregel.txt" "exempelregel")
+}
+
+
+exregel@exempelregler
+{
+X(text="ett"),
+Y(wordcl=nn & gender=utr)
+-->
+corr(X.form(gender:=Y.gender))
+mark(X Y)
+action(scrutinizing)
+}
+--------------------------------
